[Front] Add openapi2aspida
