# front/api/api/calendar/$api.ts
@@ -1,0 +1,27 @@
+import type { AspidaClient, BasicHeaders } from 'aspida'
+import { dataToURLString } from 'aspida'
+import type { Methods as Methods0 } from '.'
+
+const api = <T>({ baseURL, fetch }: AspidaClient<T>) => {
+  const prefix = (baseURL === undefined ? 'http://localhost:3000' : baseURL).replace(/\/$/, '')
+  const PATH0 = '/api/calendar'
+  const GET = 'GET'
+
+  return {
+    /**
+     * @returns Return batch history list
+     */
+    get: (option?: { query?: Methods0['get']['query'] | undefined, config?: T | undefined } | undefined) =>
+      fetch<Methods0['get']['resBody'], BasicHeaders, Methods0['get']['status']>(prefix, PATH0, GET, option).json(),
+    /**
+     * @returns Return batch history list
+     */
+    $get: (option?: { query?: Methods0['get']['query'] | undefined, config?: T | undefined } | undefined) =>
+      fetch<Methods0['get']['resBody'], BasicHeaders, Methods0['get']['status']>(prefix, PATH0, GET, option).json().then(r => r.body),
+    $path: (option?: { method?: 'get' | undefined; query: Methods0['get']['query'] } | undefined) =>
+      `${prefix}${PATH0}${option && option.query ? `?${dataToURLString(option.query)}` : ''}`
+  }
+}
+
+export type ApiInstance = ReturnType<typeof api>
+export default api
